Fix readability and adapt a better vertical rhythm for all devices

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -50,7 +50,7 @@ Latin Modern (LaTeX default) font */
   box-sizing: border-box;
 }
 html {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
 }
 body,
 html {
@@ -85,7 +85,7 @@ dl dd {
   text-align: center;
 }
 h1 {
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
   padding-bottom: 2rem;
   border-bottom: 1px solid var(--color);
   width: 100%;
@@ -95,6 +95,7 @@ h1 {
 }
 h2 {
   line-height: 2rem;
+  margin-bottom: 0.5rem;
 }
 sup {
   vertical-align: top;
@@ -127,14 +128,25 @@ pre[class*='language-'],
 :not(pre) > code[class*='language-'] {
   background: var(--color);
 }
-
-@media (max-width: 600px) {
+@media (min-width: 500px) and (max-width: 800px) {
+  html {
+    font-size: 1.2rem;
+  }
+  h1 {
+    font-size: 2.2rem;
+    line-height: 2.7rem;
+  }
+}
+@media (max-width: 500px) {
   html {
     font-size: 1rem;
   }
   h1 {
-    font-size: 2rem;
-    line-height: 2.7rem;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+  }
+  h2 {
+    font-size: 1.3rem;
   }
 }
 @media (prefers-color-scheme: dark) {
